creacion de tabla en dashboard con datatables, modificacion json, funcionalidad vista previa

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ logs/
 
 # Ignorar todos los archivos dentro de client/asset/json
 client/asset/json/
+
+#Ignorar archivo generado por VSCode
+.idea
