--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@ client/asset/json/
 .vscode
 
 #Ignorar las imágenes
-client/asset/uploads/*.*
+client/asset/uploads/*
+
+#no ignorar la carpeta uploads
+!client/asset/uploads/
